# tauri-leptos

./: Cargo.toml  leptosfmt.toml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
