[package]
name = "tauri-leptos-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
uuid = { version = "1.7", features = ["v4"]}
leptos_router = { version = "0.6.7", features = ["csr"] }

[workspace]
members = ["src-tauri"]
